--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Basic SEO Meta Tags -->
+<meta name="description" content="BK Enterprises - Your trusted partner for premium building materials and oil trading solutions in Kerala since 2010. Serving Uppala, Seethangoli, and Puttur with quality construction materials and reliable oil import/export services.">
+<meta name="keywords" content="bk buildmart,bk build,bk buildmart mura,building materials, oil trade, construction supplies, Kerala, Uppala, Seethangoli, Puttur, tiles, sanitary ware, electrical components, plumbing materials, oil import export">
+
+<!-- Open Graph Meta Tags for better social media sharing -->
+<meta property="og:title" content="BK Enterprises - Building Materials & Oil Trade Since 2010">
+<meta property="og:description" content="Premium building materials and oil trading solutions for residential and commercial projects across Kerala.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.bkenterprises.com">
+<meta property="og:image" content="https://www.bkenterprises.com/logo-image.jpg">
+
+<!-- Additional helpful meta tags -->
+<meta name="robots" content="index, follow">
+<meta name="author" content="BK Enterprises">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BK Enterprises - Building Materials & Oil Trade</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
